--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- call the featured-post-image.html template file -->
+  {% if page.featured-image %}
+  <meta property="og:image" content="{{ site.url }}{{ page.featured-image }}" />
+  {% endif %}
+  <meta property="og:description" content="{{ page.subtitle }}" />
+
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
